# FitterModule

./: .clang-tidy  CMakeLists.txt  README.md  SNFitterModule.cpp  fit.conf.in  fitter_library.cpp  fitter_library.h  fitter_module.cpp  fitter_module.h
SNFitter/: DataProducts.h  SNFitter.cpp  SNFitter.h  SNFitterImpl.cpp  SNFitterImpl.h
testing/: blfittest.cpp  helixtest.cpp  idealhelix1000.root  idealline1000.root  linefiletest.cpp  linetest.cpp  pftest.cpp  rhtest.cpp  trial.cpp
